Revisions to case study paper

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -310,12 +310,12 @@ where $nCU$ is the number of CUs used (3, 4, or 5), $S_{i,t}$ is the abundance o
 Logistic regression model fits in 2020 from the integrated Logistic:Sgen-Ricker, Logistic:Sgen-priorCap and Logistic:IFCRT models are shown in Figure \@ref(fig:coho-IM-logisticFit2020). All three logistic regression LRP methods were able to converge on a solution in 2020. Resulting LRPs for different *p* thresholds are shown on the regression curves, as well as in Table \@ref(tab:logisticLRPs2020). There was considerable uncertainty around predicted curves as seen in the large areas of gray shading in Figure \@ref(fig:coho-IM-logisticFit2020).  
 
 
-```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit from the three logistic regression models: Logistic:Sgen-Ricker, Logistic:Sgen-priorCap and Logistic:IFCRT LRP model using data from 1998 - 2020. Dots represent individual years and 'x' represents the latest year in the time series. The yellow vertical line shows the LRP estimate based on the requirement of a 50\\% probability of all CUs being above S\\textsubscript{gen}, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively.", warning=FALSE, echo=FALSE, out.width = '90%', fig.align="center"}
+```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit from the three logistic regression models (Logistic:Sgen-Ricker, Logistic:Sgen-priorCap and Logistic:IFCRT) using data from 1998 - 2020. Dots represent individual years and 'x' represents the latest year in the time series. The yellow vertical line shows the LRP estimate based on the requirement of a 50\\% probability of all CUs being above S\\textsubscript{gen}, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively.", warning=FALSE, echo=FALSE, out.width = '90%', fig.align="center"}
 knitr::include_graphics("figure/coho-all-LogisticLRP.png")
 ```
 \linebreak
   
-When the Logistic:Sgen-Ricker model was used, aggregate abundance LRPs ranged from  21,189 to 35,737 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%) (Table \@ref(tab:logisticLRPs2020)). LRPs increased across all probability levels when the carrying capacity was assumed higher under the Logistic:Sgen-priorCap model (Table \@ref(tab:logisticLRPs2020)). The higher S~gen~ values for most CUs under the alternative Logistic:Sgen_priorCap model formulation resulted in more historical years in which < 100% of CUs were above S~gen~. The result was a shift of the logistic curve to the right (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on the Logistic:Sgen_priorCap model ranged from 23,245 to 39,200 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%).  
+When the Logistic:Sgen-Ricker model was used, aggregate abundance LRPs ranged from  21,190 to 35,737 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%) (Table \@ref(tab:logisticLRPs2020)). LRPs increased across all probability levels when the carrying capacity was assumed higher under the Logistic:Sgen-priorCap model (Table \@ref(tab:logisticLRPs2020)). The higher S~gen~ values for most CUs under the alternative Logistic:Sgen_priorCap model formulation resulted in more historical years in which < 100% of CUs were above S~gen~. The result was a shift of the logistic curve to the right (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on the Logistic:Sgen_priorCap model ranged from 23,245 to 39,200 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%).  
 
 
 When CU status was based on the IFCRT distributional target, the fit of the logistic curve had a more gradual slope than the two S~gen~ models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020)). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
@@ -337,15 +337,14 @@ When CU status was based on the IFCRT distributional target, the fit of the logi
 (\#tab:logisticLRPs2020)
 \end{table}
 
-\
-&nbsp;
+
 &nbsp;
 
 ***Logistic Regression Diagnostics***
 
 Logistic regression diagnostics showed that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression LRPs from all three models (Table \@ref(tab:logisticDiagIFC2020)). The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption (Table \@ref(tab:logisticDiagIFC2020)). An examination of deviance residuals did not show any large outliers, i.e., no residual values were greater than 2 standard deviations away from zero for all three models. Observations were also found to be independent at all year lags examined for all three models based on no significant autocorrelations among residuals. 
 
-The Wald test showed that the logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Pseudo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This result was especially true for the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap model which had hit ratios ranging between 0.83 and 0.87 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
+The Wald test showed that the logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Pseudo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This result was especially true for the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap models which had hit ratios ranging between 0.83 and 0.87 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 
 
 \renewcommand*{\arraystretch}{1.5}
@@ -371,7 +370,6 @@ The Wald test showed that the logistic model coefficient for aggregate abundance
 
 Sample sizes were small due to the short time series available for Interior Fraser Coho; only 23 years of observations were available to fit logistic regression models. @peduzziSimulationStudyNumber1996 recommend a minimum requirement of 10 data points for the least frequent outcome based on their simulation studies in the field of clinical epidemiology. In our case, the least frequent outcome was the failure of all CUs to be above their benchmarks (i.e., 0). We were not able to make this minimum requirement for any of our model fits; we had only 7, 8, and 5 data points at the least frequent outcome for the Logistic:Sgen-Ricker, Logistic:Sgen-priorCap, and Logistic-IFCRT models, respectively. Based on the current ratio of successes and fails in the data, the estimated minimum sample sizes that would be required to meet the criteria of @peduzziSimulationStudyNumber1996 ranged from 26 to 42 years. However, despite small sample sizes, hit ratios are high for all models at p = 50%.  As a result, we suggest that logistic regression LRPs may still be useful for this SMU.  We proceeded with retrospective analyses in order to examine how sensitive LRPs based on these model fits were to variations in the level of available data.
 
-\
 &nbsp;
 
 ***Retrospective Analysis and Analysis Evaluating Impact of Missing CUs***
@@ -385,7 +383,7 @@ knitr::include_graphics("figure/coho_LRP_compareRetro.png")
 \
 &nbsp;
 
-When the Logistic:Sgen-Ricker model was applied retrospectively to missing data scenarios with 4 out of the 5 CUs, only a subset of scenarios had LRP estimates that converged on a solution (Figure \@ref(fig:coho-IM-missingCUs)). All 5 possible combinations of 4 CUs had estimates in 2017-2019, while only 4 combinations had estimates in 2020. For scenarios in which LRP estimates were possible, estimates of aggregate status (Equation \@ref(eq:status)) were often close to the estimate obtained when all 5 CUs were used, and always overlapped with the 95% confidence interval of the full data estimate. The Logistic:Sgen-Ricker model was less likely to converge on a solution when data from only three CUs were used. This pattern was especially true for 2020 when only 6 out of the 10 possible combinations had estimates. For scenarios that were able to converge, aggregate status estimates from three CUs tended to be more uncertain than 4- and 5-CU estimates, and showed larger deviations from estimated status when all CUs were used. One missing data scenario in 2019 had a status estimate that fell outside of the 95% confidence interval of the full data estimate.  
+When the Logistic:Sgen-Ricker model was applied retrospectively to missing data scenarios with 4 out of the 5 CUs, only a subset of scenarios had LRP estimates that converged on a solution (Figure \@ref(fig:coho-IM-missingCUs)). All five possible 4-CU combinations had estimates in 2017-2019, while only four combinations had estimates in 2020. For scenarios in which LRP estimates were possible, estimates of aggregate status (Equation \@ref(eq:status)) were often close to the estimate obtained when all 5 CUs were used, and always overlapped with the 95% confidence interval of the full data estimate. The Logistic:Sgen-Ricker model was less likely to converge on a solution when data from only 3 CUs were used. This pattern was especially true for 2020 when only six out of the ten possible combinations had estimates. For 3-CU scenarios that were able to converge, aggregate status estimates tended to be more uncertain than 4- and 5-CU scenarios, and showed larger deviations from estimated status when all CUs were used. One missing data scenario in 2019 had a status estimate that fell outside of the 95% confidence interval of the full data estimate.  
 
 
 ```{r coho-IM-missingCUs, fig.cap="Estimates of SMU status (with 95\\% confidence intervals) from the Logistic:Sgen-Ricker model under different scenarios about missing CUs, where aggregate status is characterized as the recent generational mean of aggregate abundance / LRP. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. The set of status estimates associated with each number of CUs on the x-axis represents all possible combinations of CUs created by selecting that number from the 5 available CUs.  Red dashed lines show the maximum likelihood estimate when no data is missing (i.e., all 5 CUs) for comparison with the missing data scenarios. Note that the y-axis has been truncated at 6, so the upper limits of some error bars are not shown.", warning=FALSE, echo=FALSE, out.width = '70%', fig.align="center"}
@@ -394,7 +392,7 @@ knitr::include_graphics("figure/coho-StatusByNCUs-IndivRickerSurv-50.png")
 
 \newpage
   
-When the Logistic:Sgen-priorCap model was applied to missing data scenarios in which 4 out of 5 CUs had data, LRP estimates were only available for 2 of the 5 CU combinations (Figure \@ref(fig:coho-IMCap-missingCUs)). For scenarios in which LRP estimates were available, status was poorly estimated with the estimate often falling outside of the 95% confidence interval of the full data estimate. While convergence was more frequent when only 3 CUs were used, estimates had high uncertainty and were variable among scenarios. Several of the status estimates from 3-CU scenarios fell outside of the 95% confidence interval for the full data case. In the year 2018 the model did not converge when all CUs were included, but estimates for missing CU scenarios were available.
+When the Logistic:Sgen-priorCap model was applied to missing data scenarios in which 4 out of 5 CUs had data, LRP estimates were only available for two of the five CU combinations (Figure \@ref(fig:coho-IMCap-missingCUs)). For scenarios in which LRP estimates were available, status was poorly estimated with the estimate often falling outside of the 95% confidence interval of the full data estimate. While convergence was more frequent when only 3 CUs were used, estimates had high uncertainty and were variable among scenarios. Several of the status estimates from 3-CU scenarios fell outside of the 95% confidence interval for the full data case. In the year 2018 the model did not converge when all CUs were included, but estimates for missing CU scenarios were available.
 
 
 ```{r coho-IMCap-missingCUs, fig.cap="Estimates of SMU status (with 95\\% confidence intervals) from the Logistic:Sgen-priorCap model under different scenarios about missing CUs, where status is characterized as the recent generational mean of aggregate abundance / LRP. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. The set of status estimates associated with each number of CUs on the x-axis represents all possible combinations of CUs created by selecting that number from the 5 available CUs. Red dashed lines show the maximum likelihood estimate when no data is missing (i.e., all 5 CUs) for comparison with the missing data scenarios. The model with full data (5 CUs) failed to converge in 2018. Note that the y-axis has been truncated at 5, so the upper limits of some error bars are not shown.", warning=FALSE, echo=FALSE, out.width = '70%',  fig.align="center"}
