update url for one ref

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -239,7 +239,7 @@
 @article{dfoSouthernSalmonIntegrated2021,
 	title = {Southern {Salmon} {Integrated} {Fisheries} {Management} {Plan} 2021/22},
 	volume = {21-2051},
-	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40980078.pdf},
+	url = {https://science-catalogue.canada.ca/record=4098007~S6},
 	language = {en},
 	author = {{DFO}},
 	year = {2021},
