--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -11,7 +11,7 @@ output:
 <!-- LW comment: there are 8 labeled inlets in Fig 22, but Esparanza and Nootka are grouped together in Table 6 and the text refers to 7 inlets. Why are Nootka and Esperanza grouped? -->
 
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionPacificSalmonCommission2018; @dfoReviewUpdateSouthern2013], 7 large inlets (or sounds), and 20 escapement indicators populations which have relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview)) [@riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production for many of these populations, where they help achieve harvest, conservation and assessment objectives. However, hatcheries are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in @holtGuidelinesDefiningLimitInpress, only escapement indicator populations without significant enhancement (i.e., populations with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included in this analysis. Although most fish in these populations are of natural origin (i.e., they spawned in the wild), 'wild' fish, defined in the WSP as second generation natural-origin fish, may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of three CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionPacificSalmonCommission2018; @dfoReviewUpdateSouthern2013], 7 large inlets (or sounds), and 20 escapement indicators populations which have relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview)) [@riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production for many of these populations, where they help achieve harvest, conservation and assessment objectives. However, hatcheries are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in @holtGuidelinesDefiningLimitInpress, only escapement indicator populations without significant enhancement (i.e., populations with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included in this analysis. Although most fish in these populations are of natural origin (i.e., they spawned in the wild), 'wild' fish, defined in the WSP as second generation natural-origin fish, may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
 
 
 
@@ -22,7 +22,7 @@ knitr::include_graphics("figure/chinook-map.png")
 \renewcommand*{\arraystretch}{1.5}
 \begin{table}[ht]
 \centering
-\caption{Overview of WCVI Chinook Stock Management Unit. Italics represent escapement indicators with average PNI values $<$ 0.5 and are excluded from analyses. The inlets, San Juan and Nitinat do not contain escapement indicator populations with PNI $\geqslant$ 0.5 and are not included in these analyses. }
+\caption{Overview of WCVI Chinook SMU. Italics represent escapement indicators with average PNI values $<$ 0.5 and are excluded from analyses. The inlets, San Juan and Nitinat do not contain escapement indicator populations with PNI $\geqslant$ 0.5 and are not included in these analyses. }
 \begin{tabular}{p{0.3\textwidth}p{0.2\textwidth}p{0.4\textwidth}}
 \hline
 CU       &  Inlets   &  Indicators \\ 
@@ -414,6 +414,8 @@ ggplot(ERs,aes(Year, ER)) + geom_point() + geom_line()
 ```
 
 \newline
+&nbsp;
+
 **Covariance in exploitation**
 
 Covariance in exploitation rates among inlets is modelled as common interannual exploitation parameterized from pre-terminal exploitation on Robertson Creek hatchery Chinook, with additional inlet-specific variability. The common variability occurs due to their overlapping distribution in offshore fisheries, whereas inlet-specific variability results form inlet-specific vulnerability to exploitation in coastal waters and terminal fisheries within the inlets.
