Finished proofread of case study paper

--- a/caseStudyWP/appendix-ERsensitivity.Rmd
+++ b/caseStudyWP/appendix-ERsensitivity.Rmd
@@ -15,10 +15,10 @@ Specifically, we evaluated the sensitivity of aggregate projection-based LRPs to
 
 1. All component inlets were assumed to have stock-recruitment parameters drawn from the same distributions (the mean and standard deviation for productivity and S~REP~ as estimated for Quatsino, west coast Vancouver Island) but a unique set of stock-recruitment parameters was drawn for each inlet and trial (i.e., each inlet was a replicate of each other with random variability). We chose to draw S~REP~ from a random distributions instead of Ricker $beta$ or S~MAX~ (1/$beta$) because the spawner-recruitment relationship was parameterized with S~REP~ for this case study. In preliminary sensitivity analyses, we sampled from a random distribution of $beta$ values and found similar results. We assumed strong positive covariation in recruitment residuals among inlets with pairwise correlations equal to 0.7. 
 
-2. The productivity parameter was fixed at the mean value of the assumed distribution for all inlets and trials. S~REP~ was drawn from its distribution and allowed to vary across inlets and trials. The same distribution of S~REP~ was used across inlets and trials, as in Scenario 1. 
+2. The productivity parameter was fixed at the mean of the assumed distribution for all inlets and trials. S~REP~ was drawn from its distribution and allowed to vary across inlets and trials. The same distribution of S~REP~ was used across inlets and trials, as in Scenario 1. 
 
 
-3. S~REP~ was fixed at the mean value of the distribution across inlets and across trials. The productivity parameter was drawn from the distribution and allowed to vary across inlets and trials. The same distribution of productivity was used across inlets and trials, as in Scenario 1.
+3. S~REP~ was fixed at the mean of the distribution across inlets and across trials. The productivity parameter was drawn from the distribution and allowed to vary across inlets and trials. The same distribution of productivity was used across inlets and trials, as in Scenario 1.
 
 
 We found that the sensitivity of projection-based LRPs to exploitation rates was due to variability in productivity and to a lesser extent S~REP~ among inlets. In Scenario 1, when we applied a relatively high exploitation rate (45%), productivity and S~REP~ tended to be lower for random trials and inlets that dropped below the lower benchmark in at least one year (Fig. \@ref(fig:chinook-SRHistEven)). Random trials and inlets with abundances that remained above the lower benchmark over the time-series tended to be more productive and slightly larger. 
