--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -385,8 +385,10 @@ knitr::include_graphics("figure/coho_LRP_compareRetro.png")
 
 When the Logistic:Sgen-Ricker model was applied retrospectively to missing data scenarios with 4 out of the 5 CUs, only a subset of scenarios had LRP estimates that converged on a solution (Figure \@ref(fig:coho-IM-missingCUs)). All five possible 4-CU combinations had estimates in 2017-2019, while only four combinations had estimates in 2020. For scenarios in which LRP estimates were possible, estimates of aggregate status (Equation \@ref(eq:status)) were often close to the estimate obtained when all 5 CUs were used, and always overlapped with the 95% confidence interval of the full data estimate. The Logistic:Sgen-Ricker model was less likely to converge on a solution when data from only 3 CUs were used. This pattern was especially true for 2020 when only six out of the ten possible combinations had estimates. For 3-CU scenarios that were able to converge, aggregate status estimates tended to be more uncertain than 4- and 5-CU scenarios, and showed larger deviations from estimated status when all CUs were used. One missing data scenario in 2019 had a status estimate that fell outside of the 95% confidence interval of the full data estimate.  
 
+&nbsp;
+&nbsp;
 
-```{r coho-IM-missingCUs, fig.cap="Estimates of SMU status (with 95\\% confidence intervals) from the Logistic:Sgen-Ricker model under different scenarios about missing CUs, where aggregate status is characterized as the recent generational mean of aggregate abundance / LRP. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. The set of status estimates associated with each number of CUs on the x-axis represents all possible combinations of CUs created by selecting that number from the 5 available CUs.  Red dashed lines show the maximum likelihood estimate when no data is missing (i.e., all 5 CUs) for comparison with the missing data scenarios. Note that the y-axis has been truncated at 6, so the upper limits of some error bars are not shown.", warning=FALSE, echo=FALSE, out.width = '70%', fig.align="center"}
+```{r coho-IM-missingCUs, fig.cap="Estimates of SMU status (with 95\\% confidence intervals) from the Logistic:Sgen-Ricker model under different scenarios about missing CUs, where aggregate status is characterized as the recent generational mean of aggregate abundance / LRP. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. The set of status estimates associated with each number of CUs on the x-axis represents all possible combinations of CUs created by selecting that number from the 5 available CUs.  Red dashed lines show the maximum likelihood estimate when no data is missing (i.e., all 5 CUs) for comparison with the missing data scenarios. Note that the y-axis has been truncated at 6, so the upper limits of some error bars are not shown.", warning=FALSE, echo=FALSE, out.width = '80%', fig.align="center"}
 knitr::include_graphics("figure/coho-StatusByNCUs-IndivRickerSurv-50.png")
 ```  
 
