added Julie to author list and reviewers to acknowledgements

--- a/guidelinesWP/06.5-Acknowledgements.Rmd
+++ b/guidelinesWP/06.5-Acknowledgements.Rmd
@@ -10,6 +10,8 @@ In addition, Brooke Davis provided invaluable help developing early versions of 
 
 We also thank Julie Marentette, Tim Barrett, Mary Thiess, Jason Ladell, and Danny Ings for their perspectives on LRPs nationally and as applied to other taxonomic groups.  Julie Marentette, Tim Barrett, and Mary Thiess also provided helpful comments on an earlier draft.
 
+Finally, we thank Mike Bradford (DFO) and Will Atlas (Wild Salmon Center) for detailed comments as part of the CSAP review process that improved this Research Document.
+
 <!-- Full list of TWG members:
 Michael Arbeider,
 Jessy Bokvist,
