fixed some citations in the text of the Guideliens paper

--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -14,7 +14,7 @@ We illustrate the application of the candidate methods for LRPs developed in Sec
 
 ## INTERIOR FRASER RIVER COHO
 
-The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when determining integrated CU status.  
+The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each sub-population above conservation thresholds [@interiorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when determining integrated CU status.  
 
 We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2020 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for CU status-based and logistic regression LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.56 (Figure \@ref(fig:density-cor-plot)).
 
@@ -44,7 +44,7 @@ ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) +
 ```
 
 
-We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020, which related to the strength of density dependence. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we applied the other two approaches (2) and (3) to support the development of aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection LRPs for demonstration purposes. Fisheries on Interior Fraser Coho are managed under a bilateral Canada/US management regime, detailed in Annex IV Chapter 5 of the Pacific Salmon Treaty. 
+We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@interiorfrasercohorecoveryteamConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020, which related to the strength of density dependence. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@interiorfrasercohorecoveryteamConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we applied the other two approaches (2) and (3) to support the development of aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection LRPs for demonstration purposes. Fisheries on Interior Fraser Coho are managed under a bilateral Canada/US management regime, detailed in Annex IV Chapter 5 of the Pacific Salmon Treaty. 
 
 For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses related to structural assumptions about the stock-recruitment relationship when deriving CU-level benchmarks for CU status-based and aggregate abundance LRP methods.
 
